--- a/src/app.ipynb
+++ b/src/app.ipynb
@@ -206,27 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "8f8328e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ibrah\\AppData\\Local\\Temp\\ipykernel_32188\\2608561523.py:2: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
-      "  color_map = plt.cm.get_cmap('rainbow', chromatic_num)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Rainbow color map for coloring the nodes\n",
-    "color_map = plt.cm.get_cmap('rainbow', chromatic_num)"
+    "color_map = plt.colormaps['rainbow'].resampled(chromatic_num)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "d51b3a77",
    "metadata": {},
    "outputs": [],
@@ -240,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "b88e4272",
    "metadata": {},
    "outputs": [
